View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030102 | Open CASCADE | OCCT:Visualization | public | 2018-08-31 15:05 | 2018-09-11 20:37 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.3.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030102: Visualization, TKOpenGl - Graphic3d_TOSM_FACET shading is incorrect in some cases | ||||
Description | In some cases of the flat shaded presentation there is an incorrect computed lightening for the model. | ||||
Steps To Reproduce | pload MODELING VISUALIZATION vinit vdrawparray b triangles v 0 55 0 v 0 75 0 v 20 55 0 v 0 55 0 v 0 75 0 v 0 55 20 v 0 55 0 v 0 55 20 v 20 55 0 v 0 75 0 v 0 55 20 v 20 55 0 vrotate 0.3 0.0 0.0 vfit | ||||
Tags | No tags attached. | ||||
Test case number | bugs/vis/bug30102 | ||||
2018-08-31 15:05 developer |
old_flat.png (2,726 bytes) |
|
Branch CR30102 has been created by mnv. SHA-1: 7490d4fe4581131e83d76838a0717eb11705958a Detailed log of new commits: Author: mnv Date: Fri Aug 31 15:14:49 2018 +0300 0030102: Visualization, TKOpenGl - wrong light computing for flat shaded presentation Added computing Normal value according to gl_FrontFacing parameter. |
|
Branch CR30102 has been updated forcibly by mnv. SHA-1: 1946d5e7b5a921e24edf36df38626fa08f06d0a8 |
2018-08-31 15:27 developer |
new_flat.png (2,906 bytes) |
|
Patch is ready for review. |
|
Branch CR30102 has been updated forcibly by kgv. SHA-1: b9336a2fbb78482927f051f983c872135345c32c |
|
Please take the patch. |
|
Branch CR30102 has been deleted by inv. SHA-1: b9336a2fbb78482927f051f983c872135345c32c |
occt: master 1ad3bc4c 2018-08-31 12:14:49
Committer: bugmaster Details Diff |
0030102: Visualization, TKOpenGl - Graphic3d_TOSM_FACET shading is incorrect in some casesn gl_FrontFacing is now considered within Normal computation. |
Affected Issues 0030102 |
|
mod - src/OpenGl/OpenGl_ShaderManager.cxx | Diff File | ||
add - tests/bugs/vis/bug30102 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-08-31 15:05 |
|
New Issue | |
2018-08-31 15:05 |
|
Assigned To | => kgv |
2018-08-31 15:05 |
|
File Added: old_flat.png | |
2018-08-31 15:06 |
|
Assigned To | kgv => mnv |
2018-08-31 15:06 |
|
Status | new => assigned |
2018-08-31 15:22 | git | Note Added: 0078890 | |
2018-08-31 15:26 | git | Note Added: 0078892 | |
2018-08-31 15:27 |
|
File Added: new_flat.png | |
2018-08-31 15:28 |
|
Note Added: 0078893 | |
2018-08-31 15:28 |
|
Assigned To | mnv => kgv |
2018-08-31 15:28 |
|
Status | assigned => resolved |
2018-09-03 10:10 | kgv | Summary | Visualization, TKOpenGl - wrong light computing for flat shaded presentation => Visualization, TKOpenGl - Graphic3d_TOSM_FACET shading is incorrect in some cases |
2018-09-03 10:14 | git | Note Added: 0078917 | |
2018-09-03 10:14 | kgv | Note Added: 0078918 | |
2018-09-03 10:14 | kgv | Assigned To | kgv => bugmaster |
2018-09-03 10:14 | kgv | Status | resolved => reviewed |
2018-09-03 10:14 | kgv | Product Version | => 7.3.0 |
2018-09-03 10:14 | kgv | Relationship added | child of 0028069 |
2018-09-03 15:07 | bugmaster | Test case number | => bugs/vis/bug30102 |
2018-09-09 11:52 | bugmaster | Changeset attached | => occt master 1ad3bc4c |
2018-09-09 11:52 | bugmaster | Status | reviewed => verified |
2018-09-09 11:52 | bugmaster | Resolution | open => fixed |
2018-09-09 13:05 | git | Note Added: 0079047 |