0030102: Visualization, TKOpenGl - Graphic3d_TOSM_FACET shading is incorrect in some casesn

gl_FrontFacing is now considered within Normal computation.